Se aplico el modo Oscuro sin transición, queda pendiente eso.

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="shortcut icon" href="/React1/src/assets/faviconReact.ico" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Prueba</title>
+    <title>ShukranAudiovisual</title>
   </head>
-  <body>
+  <body class=" bg-white dark:bg-darkBackground text-black dark:text-OffWhite">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
