--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
   <body class=" bg-white dark:bg-darkBackground text-black dark:text-OffWhite">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <script type="module" src="https://cdn.jsdelivr.net/npm/@justinribeiro/lite-youtube@1.5.0/lite-youtube.js"></script>
   </body>
 </html>
